@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-11-27T01:49:32Z",
-  "count" : 125,
+  "timestamp" : "2024-12-10T01:53:12Z",
+  "count" : 49,
   "count_minmax" : [ 25, 125 ],
-  "count_decinc" : [ -0, +125 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -76, +125 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
