@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-12-09T01:54:38Z",
-  "count_outdated" : 234977,
-  "uniques_outdated" : 2322,
-  "count" : 236745,
-  "uniques" : 2340,
+  "timestamp" : "2024-12-10T01:53:12Z",
+  "count_outdated" : 235101,
+  "uniques_outdated" : 2323,
+  "count" : 236867,
+  "uniques" : 2341,
   "clones" : [
     {
-      "timestamp": "2024-11-25T00:00:00Z",
-      "count": 49,
-      "count_minmax": [ 23, 124 ],
-      "count_decinc": [ 75, 124 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-11-26T00:00:00Z",
-      "count": 125,
+      "count": 49,
       "count_minmax": [ 25, 125 ],
-      "count_decinc": [ 0, 125 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 76, 125 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-11-27T00:00:00Z",
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2024-12-09T00:00:00Z",
-      "count": 19,
-      "count_minmax": [ 19, 19 ],
-      "count_decinc": [ 0, 19 ],
+      "count": 121,
+      "count_minmax": [ 19, 121 ],
+      "count_decinc": [ 0, 121 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-10T00:00:00Z",
+      "count": 20,
+      "count_minmax": [ 20, 20 ],
+      "count_decinc": [ 0, 20 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
