@@ -1,16 +1,11 @@
 {
-  "count": 1693,
-  "uniques": 4,
+  "count": 1690,
+  "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-11-25T00:00:00Z",
+      "timestamp": "2024-11-26T00:00:00Z",
       "count": 49,
       "uniques": 1
-    },
-    {
-      "timestamp": "2024-11-26T00:00:00Z",
-      "count": 125,
-      "uniques": 2
     },
     {
       "timestamp": "2024-11-27T00:00:00Z",
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2024-12-09T00:00:00Z",
-      "count": 19,
+      "count": 121,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-10T00:00:00Z",
+      "count": 20,
       "uniques": 1
     }
   ]
